--- a/.github/workflows/xmly_speed.yaml
+++ b/.github/workflows/xmly_speed.yaml
@@ -38,4 +38,4 @@ jobs:
                   BARK_SOUND: ${{ github.event.client_payload.BARK_SOUND || secrets.BARK_SOUND }}
                   TG_BOT_TOKEN: ${{ github.event.client_payload.TG_BOT_TOKEN || secrets.TG_BOT_TOKEN }}
                   TG_USER_ID: ${{ github.event.client_payload.TG_USER_ID || secrets.TG_USER_ID }}
-                  SYNCURL: https://github.com/Zero-S1/xmly_speed/raw/master/xmly_speed.py
+                  SYNCURL: https://raw.githubusercontent.com/shitouer0515/xmly_speed/master/xmly_speed.py
